# Voclos-By-BeMyVoice

./: .env  README.md  libras_hands_words.json  main.py  pyproject.toml
